--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "dependencies": {
     "@progress/kendo-data-query": "^1.5.1",
+    "@progress/kendo-date-math": "^1.4.1",
+    "@progress/kendo-react-common": "^3.2.2",
     "@progress/kendo-react-dateinputs": "^3.2.2",
     "@progress/kendo-react-dropdowns": "^3.2.2",
     "@progress/kendo-react-grid": "^3.2.2",
     "@progress/kendo-react-inputs": "^3.2.2",
     "@progress/kendo-react-intl": "^3.2.2",
+    "@progress/kendo-react-popup": "^3.2.2",
+    "@progress/kendo-react-tooltip": "^3.2.2",
     "@progress/kendo-theme-default": "^4.1.0",
     "axios": "^0.19.0",
+    "import": "0.0.6",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-calendar": "^2.19.0",
