--- a/client/package.json
+++ b/client/package.json
@@ -1,48 +1,49 @@
 {
-  "name": "workingout",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@progress/kendo-data-query": "^1.5.1",
-    "@progress/kendo-date-math": "^1.4.1",
-    "@progress/kendo-react-common": "^3.2.2",
-    "@progress/kendo-react-dateinputs": "^3.2.2",
-    "@progress/kendo-react-dropdowns": "^3.2.2",
-    "@progress/kendo-react-grid": "^3.2.2",
-    "@progress/kendo-react-inputs": "^3.2.2",
-    "@progress/kendo-react-intl": "^3.2.2",
-    "@progress/kendo-react-popup": "^3.2.2",
-    "@progress/kendo-react-tooltip": "^3.2.2",
-    "@progress/kendo-theme-default": "^4.1.0",
-    "axios": "^0.19.0",
-    "import": "0.0.6",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.10",
-    "react-calendar": "^2.19.0",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "proxy": "http://localhost:8080",
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "workingout",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@progress/kendo-data-query": "^1.5.1",
+        "@progress/kendo-date-math": "^1.4.1",
+        "@progress/kendo-react-common": "^3.2.2",
+        "@progress/kendo-react-dateinputs": "^3.2.2",
+        "@progress/kendo-react-dropdowns": "^3.2.2",
+        "@progress/kendo-react-grid": "^3.2.2",
+        "@progress/kendo-react-inputs": "^3.2.2",
+        "@progress/kendo-react-intl": "^3.2.2",
+        "@progress/kendo-react-popup": "^3.2.2",
+        "@progress/kendo-react-tooltip": "^3.2.2",
+        "@progress/kendo-theme-default": "^4.1.0",
+        "axios": "^0.19.0",
+        "firebase": "^6.3.5",
+        "import": "0.0.6",
+        "react": "^16.8.6",
+        "react-bootstrap": "^1.0.0-beta.10",
+        "react-calendar": "^2.19.0",
+        "react-dom": "^16.8.6",
+        "react-router-dom": "^5.0.1",
+        "react-scripts": "3.0.1"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "proxy": "http://localhost:8080",
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
