--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@material-ui/core": "^4.3.2",
         "@progress/kendo-data-query": "^1.5.1",
         "@progress/kendo-date-math": "^1.4.1",
         "@progress/kendo-react-common": "^3.2.2",
